--- a/beck_app/src/main/webapp/template_guest.xhtml
+++ b/beck_app/src/main/webapp/template_guest.xhtml
@@ -26,12 +26,12 @@
                 </p:layoutUnit>
 
                 <p:layoutUnit position="west" size="175" header="Menu" collapsible="true">
-                    <h:form id="menuForm2">
+                    <h:form id="menuForm3">
                         <p:menu>       
                             <p:menuitem value="Home" outcome="/index" />
                             <p:menuitem value="Zarejestruj" outcome="/register/register" />
-                             <p:menuitem value="Zaloguj" outcome="/login/login" />
-                            <p:menuitem value="Test listy" outcome="/guest_views/notice/List" />
+                            <p:menuitem value="Zaloguj" outcome="/login/login" />
+                            <p:menuitem value="Recenzje" outcome="/guest_views/notice/List" />                     
                         </p:menu>
                     </h:form>
                 </p:layoutUnit>
