--- a/beck_app/src/main/webapp/admin_views/imagesNotice/List.xhtml
+++ b/beck_app/src/main/webapp/admin_views/imagesNotice/List.xhtml
@@ -50,13 +50,13 @@
                             <f:facet name="header">  
                                     <h:outputText value="Obraz:"/>
                             </f:facet>
-                            <p:graphicImage value="#{imageController.image}" >
+                            <p:graphicImage value="#{imageControllerN.image}" >
                                 <f:param name="id_img" value="#{item.idimagesNotice}" />
                             </p:graphicImage>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{imagesNoticeController.prepareCreate}" update=":ImagesNoticeCreateForm2" oncomplete="PF('ImagesNoticeCreateDialog2').show()"/>
-                                         </f:facet>
+                        </f:facet>
                     </p:dataTable>
                 </p:panel>
             </h:form>
