--- a/beck_app/src/main/webapp/admin_views/imagesNotice/Create.xhtml
+++ b/beck_app/src/main/webapp/admin_views/imagesNotice/Create.xhtml
@@ -25,7 +25,7 @@
                         <p:outputLabel value="#{Obraz}" for="images" />                 
                  <p:fileUpload value="#{imagesNoticeController.selected.images}"  mode="simple"></p:fileUpload>                 
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{imagesNoticeController.create}" value="#{bundle.Save}" update="display,:ImagesNoticeListForm:datalist,:growl" oncomplete="handleSubmit(args,'ImagesNoticeCreateDialog');"/>
+                    <p:commandButton actionListener="#{imagesNoticeController.create}" value="#{bundle.Save}" onclick="ImagesNoticeCreateDialog.hide()" update="display,:ImagesNoticeListForm:datalist,:growl" oncomplete="handleSubmit(args,'ImagesNoticeCreateDialog');"/>
                               
                     <p:commandButton value="#{bundle.Cancel}" onclick="ImagesNoticeCreateDialog.hide()"/>
                 </h:panelGroup>
