--- a/beck_app/src/main/webapp/admin_views/user/Create.xhtml
+++ b/beck_app/src/main/webapp/admin_views/user/Create.xhtml
@@ -31,7 +31,7 @@
                                            itemValue="#{addressIdItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{userController.create}" value="#{bundle.Save}" update="display,:UserListForm:datalist,:growl" oncomplete="handleSubmit(args,'UserCreateDialog');"/>
+                    <p:commandButton actionListener="#{userController.create}" value="#{bundle.Save}" onclick="UserCreateDialog.hide()" update="display,:UserListForm:datalist,:growl" oncomplete="handleSubmit(args,'UserCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="UserCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
