--- a/beck_app/src/main/webapp/admin_views/user/Edit.xhtml
+++ b/beck_app/src/main/webapp/admin_views/user/Edit.xhtml
@@ -32,7 +32,7 @@
                                            itemValue="#{addressIdItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{userController.update}" value="#{bundle.Save}" update="display,:UserListForm:datalist,:growl" oncomplete="handleSubmit(args, 'UserEditDialog');"/>
+                    <p:commandButton actionListener="#{userController.update}" value="#{bundle.Save}" onclick="UserEditDialog.hide()" update="display,:UserListForm:datalist,:growl" oncomplete="handleSubmit(args, 'UserEditDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="UserEditDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
