--- a/beck_app/src/main/webapp/user_views/events/Create.xhtml
+++ b/beck_app/src/main/webapp/user_views/events/Create.xhtml
@@ -24,6 +24,7 @@
                       <f:converter converterId="com.beck.beck_app.Group1Converter" />
                      </p:pickList>
                     <p:commandButton actionListener="#{eventController.create}" value="#{bundle.Save}" update="display,:EventListForm:datalist,:growl" oncomplete="handleSubmit(args,'EventCreateDialog');"       >              
+                        <f:actionListener binding="#{eventController.setProps(eventController.selected.eventName)}" />    
                         <f:actionListener binding="#{eventController.saveGroups(userController.selected,group1Controller.selected)}"/>
                     </p:commandButton>
                     <p:commandButton value="#{bundle.Cancel}" onclick="EventCreateDialog.hide()"/>
